# matrix-bot-roll

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  constants.py  dice.py  docker-compose.yml  element-config.json  formatting.py  health_check.py  logging_setup.py  main.py  matrix-bot-roll.py  matrix_client.py  models.py  pyproject.toml  tasks.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
tests/: test_dice.py
