[project]
name = "matrix-bot-roll"
version = "0.2.0"
description = ""
authors = [
    {name = "Arthur P-L B",email = "7021678+arthurlbrjc@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.14,<4.0"
dependencies = [
    "matrix-nio[e2e] (>=0.25.2,<0.26.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py314"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
exclude = ["(^|/)\\.venv/"]

[[tool.mypy.overrides]]
module = "nio.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "invoke (>=3.0.3,<4.0.0)",
    "watchfiles (>=1.2.0,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
